--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Research
       - href: about.qmd
         text: About
+      - href: posts.qmd
+        text: Extra
       - icon: github
         href: https://github.com/DavidRach/
       - icon: twitter
