--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,11 +9,11 @@ website:
     background: white
     left:
       - href: index.qmd
-      - text: Home
+        text: Home
     right:
       - href: about.qmd
         text: About
-      - href: blog.qmd
+      - href: posts.qmd
         text: Blog
       - icon: github
         href: https://github.com/DavidRach/
