--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
         menu: 
           - href: abstracts.qmd
             text: Abstracts
-      - href: Resume.qmd
+      - href: https://davidrach.github.io/Resume_2025.pdf
         text: Resume
       - icon: github
         href: https://github.com/DavidRach/
